pretty print MatchedGame result